yew-functional-macro/tests/functional_macro/bad-name-fail.stderr
error: expected identifier
 --> $DIR/bad-name-fail.rs:9:24
  |
9 | #[functional_component(let)]
  |                        ^^^

error: unexpected token
  --> $DIR/bad-name-fail.rs:18:25
   |
18 | #[functional_component(x, y, z)]
   |                         ^

error: expected identifier
  --> $DIR/bad-name-fail.rs:27:24
   |
27 | #[functional_component(124)]
   |                        ^^^

error: The function name and component name must not be the same
  --> $DIR/bad-name-fail.rs:36:24
   |
36 |   #[functional_component(component)]
   |  ________________________^
37 | | fn component(props: &Props) -> Html {
   | |____________^
